Burn manually instead of streaming
For some reason, Windows 10 throws `EPERM` errors when streaming data of
more than 500-600 MiB.

By experimentation, the issue dissapears when burning the image
manually, that is, copy buffers with `fs.read()` and `fs.write()`.

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "bluebird": "^2.9.30",
     "lodash": "^3.10.0",
+    "node-eta": "^0.1.1",
     "progress-stream": "^1.1.1",
     "stream-chunker": "^1.1.5"
   }
