--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "bluebird": "^2.9.30",
     "crc32-stream": "^0.4.0",
+    "denymount": "^1.0.0",
     "lodash": "^3.10.0",
     "progress-stream": "^1.1.1",
     "slice-stream": "^1.0.0",
