--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,7 @@ environment:
 
 install:
   - ps: Install-Product node $env:nodejs_version x64
+  - ps: Update-NodeJsInstallation (Get-NodeJsLatestBuild $env:nodejs_version)
 #  - npm -g install npm@2.12.1
 #  - set PATH=%APPDATA%\npm;%PATH%
 #  - npm install -g gulp
